--- a/Studentpannel/std_section/templates/courses.html
+++ b/Studentpannel/std_section/templates/courses.html
@@ -259,35 +259,35 @@
             </div>
             <div class="modal-body">
               <div class="card-body">
-                <form role="form">
+                <form role="form" action="/add_courses/" method="post">
+                  {% csrf_token %}
                   <div class="row">
                     <div class="col-lg-6 col-md-6">
                       <div class="input-group input-group-outline mb-3">
-                        <label class="form-label">Course</label>
-                        <input type="text" class="form-control" onfocus="focused(this)" onfocusout="defocused(this)">
+                        <label class="form-label" >Course</label>
+                        <input type="text" name="corses" class="form-control" onfocus="focused(this)" onfocusout="defocused(this)">
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                      <div class="col-lg-6 col-md-6">
+                        <div class="input-group input-group-outline mb-3">
+                          <label class="form-label">Fees</label>
+                          <input type="text" name="fees" class="form-control" onfocus="focused(this)" onfocusout="defocused(this)">
+                        </div>
                       </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
                       <div class="input-group input-group-outline mb-3">
-                        <select class="form-select form-control" onfocus="focused(this)" onfocusout="defocused(this)"
-                          aria-label="Default select example">
-                          <option selected>Fees</option>
-                          <option value="13k">13k</option>
-                          <option value="15k">15k</option>
-                          <option value=30k">30k</option>
-                        </select>
+                        <label class="form-label">Duration</label>
+                        <input type="text" name="duration" class="form-control" onfocus="focused(this)" onfocusout="defocused(this)">
                       </div>
-                    </div>
-
-                    <div class="input-group input-group-outline mb-3">
-                      <textarea class="form-control col-lg-12 col-md-6" placeholder="Leave a comment here"
-                        id="floatingTextarea"></textarea>
                     </div>
 
 
                     <div class="text-center">
-                      <button type="button" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-2 mb-0"
+                      <button type="submit" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-2 mb-0"
                         data-bs-dismiss="modal">Submit</button>
                     </div>
                   </div>
