--- a/Studentpannel/std_section/templates/courses.html
+++ b/Studentpannel/std_section/templates/courses.html
@@ -186,35 +186,14 @@
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Fees
                       </th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                        Comment</th>
+                        Duration</th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                        Registered Date</th>
+                        Delete & Update</th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        <div class="d-flex px-2 py-1">
-                          <div>
-                            <img src="/img/small-logos/logo-asana.svg" class="avatar avatar-sm me-3" alt="xd">
-                          </div>
-                          <div class="d-flex flex-column justify-content-center">
-                            <a href="Courses_details.html" type="button"
-                              class="btn btn-outline-primary btn-sm mb-0">Python</a>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="align-middle text-sm">
-                        <span class="text-xs font-weight-bold">35k</span>
-                      </td>
-                      <td class="align-middle text-center text-sm">
-                        <span class="text-xs font-weight-bold">It is 3 months course</span>
-                      </td>
-                      <td class="text-center text-sm">
-                        <span class="text-xs font-weight-bold"> 12 NOV 7:20 PM </span>
-                      </td>
-                    </tr>
 
+                  <tbody>
+                    {% for i in course_obj %}
                     <tr>
                       <td>
                         <div class="d-flex px-2 py-1">
@@ -223,20 +202,23 @@
                           </div>
                           <div class="d-flex flex-column justify-content-center">
                             <a href="Courses_details.html" type="button"
-                              class="btn btn-outline-primary btn-sm mb-0">React</a>
+                              class="btn btn-outline-primary btn-sm mb-0">{{i.course_name}}</a>
                           </div>
                         </div>
                       </td>
                       <td class="align-middle text-sm">
-                        <span class="text-xs font-weight-bold">35k</span>
+                        <span class="text-xs font-weight-bold">{{i.fees}}</span>
                       </td>
                       <td class="align-middle text-center text-sm">
-                        <span class="text-xs font-weight-bold">It is 6 months course</span>
+                        <span class="text-xs font-weight-bold">{{i.duration}}</span>
                       </td>
                       <td class="text-center text-sm">
-                        <span class="text-xs font-weight-bold"> 12 NOV 7:20 PM </span>
+                        <a href="{% url 'delete' i.id %}" type="submit" class="btn btn-primary" >Delete</a>
+                        <a  type="submit" class="btn btn-info" >Update</a>
                       </td>
                     </tr>
+                      {% endfor %} 
+                   
 
                   </tbody>
                 </table>
