--- a/Studentpannel/std_section/templates/viewstudents.html
+++ b/Studentpannel/std_section/templates/viewstudents.html
@@ -318,36 +318,9 @@
                       <div class="input-group input-group-outline mb-3">
                         <select class="form-select form-control" placeholder="courses" onfocus="focused(this)"
                           onfocusout="defocused(this)" aria-label="Default select example">
-                          <option class="fw-lighter" selected>Courses</option>
-                          <option value="Python">Python</option>
-                          <option value="Node js">Node js</option>
-                          <option value=Java">Java</option>
-                        </select>
-                      </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6">
-                      <div class="input-group input-group-outline mb-3">
-                        <select class="form-select form-control" onfocus="focused(this)" onfocusout="defocused(this)"
-                          aria-label="Default select example">
-                          <option selected>Fees</option>
-                          <option value="13k">13k</option>
-                          <option value="15k">15k</option>
-                          <option value=30k">30k</option>
-                        </select>
-                      </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6">
-                      <div class="input-group input-group-outline mb-3">
-                        <select class="form-select form-control" onfocus="focused(this)" onfocusout="defocused(this)"
-                          aria-label="Default select example">
-                          <option selected>Duration</option>
-                          <option value="3 Months">3 Months</option>
-                          <option value="6 Months">6 Months</option>
-                          <option value="9 Months">9 Months</option>
-                          <option value="12 Months">12 Months</option>
-
+                          {% for i in course_obj %}
+                          <option class="fw-lighter" selected>{{i.course_name}}</option>
+                          {% endfor %}
                         </select>
                       </div>
                     </div>
@@ -363,12 +336,12 @@
                     </div>
                     
                     
-                    <div class="col-lg-12 col-md-12 my-2">
+                    <!--div class="col-lg-12 col-md-12 my-2">
                       <div class="d-flex align-items-center justify-content-lg-between">
                         <label for="myfile">Upload Image : </label>
                         <input type="file" id="myfile" name="myfile">
                       </div>
-                    </div>
+                    </div-->
 
                     <div class="text-center">
                       <button type="button" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-2 mb-0"
